CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

SET(PROJECT_ORG nim65s)
SET(PROJECT_NAME eiquadprog-test)
SET(PROJECT_DESCRIPTION "test eiquadprog packaging")
SET(PROJECT_URL "https://github.com/${PROJECT_ORG}/${PROJECT_NAME}")

INCLUDE(cmake/base.cmake)

COMPUTE_PROJECT_ARGS(PROJECT_ARGS LANGUAGES CXX)
PROJECT(${PROJECT_NAME} ${PROJECT_ARGS})

ADD_PROJECT_DEPENDENCY(eiquadprog REQUIRED)

ADD_UNIT_TEST(eiquadtest eiquadprog-basic.cpp)
TARGET_LINK_LIBRARIES(eiquadtest eiquadprog::eiquadprog)
